# sst_genetech

./: .gitignore  Dockerfile  Makefile  README.md  custom.conf  input.json  main.ipynb  main.sh
20230110_121237_sst_all/wdl/: sst.wdl
sst_py/: __main__.py  environment.yaml  pyproject.toml  tools.py
sst_py/sst_py/: __main__.py  tools.py
sst_py/sst_py/tests/: test_tools.py
wdl/: sst.wdl
