[tool.poetry]
name = "sst_py"
version = "0.0.1"
description = "Genetech screening questionaire"
authors = ["Lee Leavitt"]

[tool.poetry.dependencies]
python = "3.10.8"
scanpy = "*"
python-igraph = "*"
leidenalg = "*"
defopt = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sst-genentech = "sst_py.__main__:main"